Moving index.html to application.html and reference stylesheet

--- a/client/application.html
+++ b/client/application.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="./styles/application.css">
     <script src="scripts/lib/systemjs/system.min.js"></script>
     <script src="scripts/system.config.js"></script>
     <!-- Polyfill(s) for older browsers -->
